<resources>
    <string name="app_name">Z-Flow</string>
    <string name="warn">Warn</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="xposed_description">An Xposed module that lets apps run in freeform mode</string>
    <string name="mi_freeform_not_support">Z-Flow only supports Android 13 and above</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_message">现维护者名称：ReLimus\n\n原开发者名称：KindBrave\n\n版本生效日期：2022/8/31\n\n隐私政策版本：1\n\n欢迎你使用Z-Flow，Z-Flow非常重视用户的隐私，Z-Flow本体不会收集、存储、上传任何用户信息。\n\n请仔细阅读并理解以下内容，如果你不同意Z-Flow的隐私政策或者对Z-Flow的隐私政策有疑问，请不要使用Z-Flow。\n\n1.Z-Flow本体\n为了保证Z-Flow的正常运行，Z-Flow需要申请以下可能涉及隐私的权限：\n\t1)无障碍权限\n\t\t无障碍权限用于侧边栏的展示等功能，主要利用其高保活能力特性，Z-Flow没有使用无障碍权限对系统、用户进行任何监控。\n\t2)通知使用权限\n\t\t通知使用权是可选权限，即你可以根据自己的情况选择授权或者不授权。通知使用权用户接管通知以对通知添加“小窗打开”功能，Z-Flow虽然获取到了通知内容，但是没有对其进行任何分析、存储、上传。</string>
    <string name="reject">Reject</string>
    <string name="agree">Agree</string>
    <string name="lorem_ipsum">" "</string>
    <string name="service_not_running">Xposed service is not running, have you enable Z-Flow in xposed manager?</string>
    <string name="overlay_no_permission">No floating window permission</string>
    <string name="app_is_running">The app is already in freeform mode</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="rate">Rate</string>
    <string name="coolapk_my_name">Coolapk follow me</string>
    <string name="add_qq_group">Join the QQ exchange group</string>
    <string name="add_qq_group2">Join the QQ exchange group 2</string>
    <string name="add_qq_channel">Join QQ channel</string>
    <string name="add_telegram">Telegram exchange group</string>
    <string name="open_source">Github</string>
    <string name="try_to_init_shizuku">Trying to activate Shizuku service…</string>
    <string name="try_to_init_xposed_service">Trying to connect Xposed service…</string>
    <string name="xposed_service_connected">Xposed service connected</string>
    <string name="xposed_service_not_connected">Xposed service not connected</string>
    <string name="try_to_init_xposed">Having Xposed does not help Z-Flow to open freeform, but Z-Flow can prevent the application from jumping out of the freeform to full screen after having Xposed. To use Xposed, you need to go to the Xposed management application (such as Lsposed) to check the \"system framework\" for the Z-Flow and restart the device</string>
    <string name="sui_service_description">You can already experience Z-Flow service</string>
    <string name="no_service_description">Xposed service does not start</string>
    <string name="start_market_fail">Failed to open app store</string>
    <string name="start_coolapk_fail">Failed to open Coolapk</string>
    <string name="start_qq_fail">Failed to open QQ</string>
    <string name="sui_start_short">Sui activated</string>
    <string name="shizuku_start_short">Shizuku is active</string>
    <string name="xposed_start_short">Xposed exists</string>
    <string name="accessibility_desc">Z-Flow keep alive service. This service can ensure the background survival of Z-Flow. Z-Flow does not collect any information through this service.</string>
    <string name="request_overlay_permission_fail">Unable to jump to the settings interface, please manually go to the settings to enable the \"display on top of other application interfaces\" permission of the Z-Flow</string>
    <string name="request_overlay_permission">Please select the Z-Flow to enable the permission of \"display in the upper layer of other application interface\"</string>
    <string name="reset_success">Reset Successful,Some settings take effect after restarting Z-Flow</string>
    <string name="label_floating_apps">Sidebar shortcut app selection</string>
    <string name="label_notification_apps">Take over notification app selection</string>
    <string name="all_apps">All apps</string>
    <string name="edit_apps">edit</string>
    <string name="xposed_no_start">(Optional) Xposed not activated</string>
    <string name="xposed_start">Xposed exists, please check the system framework and restart</string>
    <string name="permission_info">In order to ensure the normal operation of the software, Z-Flow needs to apply for the following permissions. Among them, the Xposed permission can prevent the application in the freeform from jumping out to the full screen; the Shizuku/Sui permission is used to open core functions such as the freeform; the accessibility permission is used to ensure the survival of the Z-Flow; the overlay window permission is used to display the freeform interface; notification The usage rights are used to open the freeform of the notification app.</string>
    <string name="shizuku_no_start">Shizuku/Sui</string>
    <string name="sui_start">Sui service is already running</string>
    <string name="shizuku_start">Shizuku service is already running</string>
    <string name="accessibility_no_start">(Optional) Click to apply for accessibility</string>
    <string name="accessibility_start">Accessibility services are already running</string>
    <string name="overlay_no_start">Click to apply for overlay window permissions</string>
    <string name="overlay_start">Overlay window is authorized</string>
    <string name="notification_no_start">(Optional) Click Notification Access</string>
    <string name="notification_start">Notify that usage rights have been authorized</string>
    <string name="label_permission">Access Request</string>
    <string name="no_permission">There are also necessary permissions without authorization</string>
    <string name="xposed_permission_intro">To enable the Xposed function, you need to go to the Xposed manager (such as Lsposed), check the system framework and restart. Please note that even if the Xposed function is enabled here, there is still a possibility of injection failure. For details, please refer to the log with the [Z-Flow] tag in Xposed.</string>
    <string name="next_step">Next step</string>
    <string name="label_setting">Settings</string>
    <string name="category_base">basic settings</string>
    <string name="switch_hide_recent">Hide from recent tasks</string>
    <string name="switch_hide_recent_summary">Hide from multitasking in Z-Flow. Cross out the Z-Flow and then re-enter to take effect</string>
    <string name="preference_reset_overlay_setting">Reset overlay position and size</string>
    <string name="preference_reset_overlay_setting_summary">Reset the position and size of the recorded freeform and sidebar. It can be used for the problems that the above two run out of the screen and cannot be controlled or the record freeform size not normal</string>
    <string name="compatible_title">Compatibility mode startup freeform (experimental)</string>
    <string name="compatible_summary">Use compatibility mode to start the freeform, this mode can solve the problem of abnormal interface size such as software notification in the freeform and full screen. Compatibility mode widget interface scaling is supported in the next version.</string>
    <string name="category_freeform">freeform settings</string>
    <string name="setting_freeform_dpi_title">Freeform interface scaling</string>
    <string name="use_sui_refuse_to_fullscreen_title">Use Shizuku/Sui to prevent apps from popping out of freeform to full screen (experimental)</string>
    <string name="use_sui_refuse_to_fullscreen_summary">Currently only supports Android 12+. This feature is recommended to be enabled only when there is no Xposed or Xposed blocking fails. Try using Shizuku/Sui to prevent apps inside the freeform from popping out of the freeform to full screen. This function is still under testing, and there is no guarantee that the blocking will be successful, and it will cause problems such as screen flickering, freezing, etc.</string>
    <string name="category_floating">sidebar</string>
    <string name="switch_floating">Global sidebar</string>
    <string name="switch_floating_summary">Open freeform apps via sidebar</string>
    <string name="menu_floating_position">Sidebar position</string>
    <string name="preference_quick_floating_app">Quick application</string>
    <string name="preference_quick_floating_app_summary">Select apps displayed in the sidebar that can quickly launch freeform</string>
    <string name="category_notify">notification</string>
    <string name="switch_notify_freeform">Show freeform button on notifications</string>
    <string name="switch_notify_freeform_summary">Keep the original notification and add a "open in freeform" button to the notification of the selected apps</string>
    <string name="preference_notification_apps_summary">Select apps that show the freeform button on their notifications</string>
    <string name="preference_notification_apps">Freeform notification apps</string>
    <string name="manual_adjust_freeform_rotation_title">Manually adjust widget orientation (experimental)</string>
    <string name="manual_adjust_freeform_rotation_summary">When turned on, allows to manually rotate the freeform orientation by double-clicking the bottom bar middle button. Due to the diversity of devices, this function may not meet expectations, please treat it rationally</string>
    <string name="service_type_title">Keep alive service type</string>
    <string name="service_type_summary">Accessibility by default. If accessibility is a problem on your device, you can select foreground notifications. When switching to foreground notifications, make sure accessibility is turned off. If accessibility works fine on your device, do not select foreground notifications</string>
    <string name="preference_start_by_recent_view_summary">How to open Z-Flow in multi task interface? After checking the desktop in xposed manager, long press the application icon on the multitasking interface. This function only supports launcher3 desktop</string>
    <string name="preference_start_by_recent_view_title">Start in RecentView</string>
    <string name="floating_alpha_title">Sidebar Transparency</string>
    <string name="freeform_size_title">小窗大小</string>
    <string name="freeform_size_land_title">横屏小窗大小</string>
    <string name="freeform_float_view_size_title">小窗悬浮窗大小</string>
    <string name="freeform_dock_style_title">Dock handle reveal width</string>
    <string name="freeform_dock_style_summary">Percentage of the app icon shown when the window docks to the screen edge (28%-100%)</string>
    <string name="freeform_dimming_amount_title">小窗背景变暗程度</string>
    <string name="max_freeform_windows_title">最多同时小窗数量</string>
    <string name="max_freeform_windows_summary">同时存在的小窗上限（1~5）。超出时自动关闭最早的小窗</string>
    <string name="popup_freeform_enable_title">桌面长按打开小窗</string>
    <string name="popup_freeform_enable_summary">开启后，长按桌面图标可打开小窗</string>
    <string name="popup_bubble_block_title">屏蔽长按消息气泡</string>
    <string name="popup_bubble_block_summary">屏蔽 Android 17 长按图标弹出的消息气泡</string>
    <string name="freeform_settings_title">小窗设置</string>
    <string name="category_sidebar">侧边栏</string>
    <string name="other_settings_title">其他设置</string>
    <string name="summary_base_placeholder">隐藏：关闭 | 保活：无障碍</string>
    <string name="summary_sidebar_placeholder">开关：开启 | 位置：右侧</string>
    <string name="summary_freeform_placeholder">DPI: 50 | 窗口大小: 75%</string>
    <string name="summary_notify_placeholder">接管通知：开启</string>
    <string name="summary_other_placeholder">重置悬浮窗位置等</string>
    <string name="preference_freeform_blacklist_apps">Freeform blacklist</string>
    <string name="preference_freeform_blacklist_apps_summary">Apps in the blacklist cannot be opened in freeform mode</string>
    <string name="preference_landscape_apps">横屏小窗应用</string>
    <string name="preference_landscape_apps_summary">勾选的应用默认以横屏小窗方式打开</string>
</resources>