<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 基本设置 -->
    <PreferenceScreen
        android:key="pref_base_settings"
        android:title="@string/category_base"
        android:summary="@string/summary_base_placeholder"
        android:icon="@drawable/ic_setting_base"
        android:layout="@layout/preference_main_entry"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/category_base">
            <SwitchPreference
                android:key="hide_from_recent"
                android:title="@string/switch_hide_recent"
                android:summary="@string/switch_hide_recent_summary"
                app:iconSpaceReserved="false"/>
            <io.relimus.zflow.ui.view.IntegerSimpleMenuPreference
                app:entries="@array/service_type"
                app:entryValues="@array/service_type_value"
                android:key="service_type"
                android:title="@string/service_type_title"
                android:summary="@string/service_type_summary"
                app:iconSpaceReserved="false"/>
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 侧边栏 -->
    <PreferenceScreen
        android:key="pref_sidebar_settings"
        android:title="@string/category_sidebar"
        android:summary="@string/summary_sidebar_placeholder"
        android:icon="@drawable/ic_setting_sidebar"
        android:layout="@layout/preference_main_entry"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/category_sidebar">
            <SwitchPreference
                android:key="show_floating"
                android:title="@string/switch_floating"
                android:summary="@string/switch_floating_summary"
                app:iconSpaceReserved="false"/>
            <io.relimus.zflow.ui.view.IntegerSimpleMenuPreference
                app:entries="@array/floating_show_position"
                app:entryValues="@array/floating_show_position_value"
                android:key="floating_position_x"
                android:title="@string/menu_floating_position"
                app:iconSpaceReserved="false"/>
            <Preference
                android:key="quick_floating_app"
                app:title="@string/preference_quick_floating_app"
                android:summary="@string/preference_quick_floating_app_summary"
                app:iconSpaceReserved="false"/>
            <SeekBarPreference
                android:key="floating_alpha"
                android:title="@string/floating_alpha_title"
                app:iconSpaceReserved="false"
                app:defaultValue="10"
                app:min="0"
                android:max="10"
                app:showSeekBarValue="true"/>
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 小窗设置 -->
    <PreferenceScreen
        android:key="pref_freeform_sub"
        android:title="@string/freeform_settings_title"
        android:summary="@string/summary_freeform_placeholder"
        android:icon="@drawable/ic_setting_freeform"
        android:layout="@layout/preference_main_entry"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/category_freeform">
            <SeekBarPreference
                android:key="freeform_scale"
                android:title="@string/setting_freeform_dpi_title"
                app:iconSpaceReserved="false"
                app:defaultValue="50"
                app:min="50"
                android:max="500"
                app:showSeekBarValue="true"/>
            <SeekBarPreference
                android:key="freeform_size"
                android:title="@string/freeform_size_title"
                app:iconSpaceReserved="false"
                app:defaultValue="75"
                app:min="10"
                android:max="100"
                app:showSeekBarValue="true"/>
            <SeekBarPreference
                android:key="freeform_size_land"
                android:title="@string/freeform_size_land_title"
                app:iconSpaceReserved="false"
                app:defaultValue="90"
                app:min="10"
                android:max="100"
                app:showSeekBarValue="true"/>
            <SeekBarPreference
                android:key="freeform_float_view_size"
                android:title="@string/freeform_float_view_size_title"
                app:iconSpaceReserved="false"
                app:defaultValue="20"
                app:min="10"
                android:max="50"
                app:showSeekBarValue="true"/>
            <io.relimus.zflow.ui.view.IntegerSimpleMenuPreference
                app:entries="@array/dock_style"
                app:entryValues="@array/dock_style_value"
                android:key="freeform_dock_style"
                android:title="@string/freeform_dock_style_title"
                android:summary="@string/freeform_dock_style_summary"
                app:iconSpaceReserved="false"/>
            <SeekBarPreference
                android:key="freeform_dimming_amount"
                android:title="@string/freeform_dimming_amount_title"
                app:iconSpaceReserved="false"
                app:defaultValue="20"
                app:min="0"
                android:max="100"
                app:showSeekBarValue="true"/>
            <SeekBarPreference
                android:key="max_freeform_windows"
                android:title="@string/max_freeform_windows_title"
                android:summary="@string/max_freeform_windows_summary"
                app:iconSpaceReserved="false"
                app:defaultValue="2"
                app:min="1"
                android:max="5"
                app:showSeekBarValue="true"/>
            <SwitchPreference
                android:key="manual_adjust_freeform_rotation"
                android:title="@string/manual_adjust_freeform_rotation_title"
                android:summary="@string/manual_adjust_freeform_rotation_summary"
                app:iconSpaceReserved="false"/>
            <SwitchPreference
                android:key="popup_freeform_enable"
                android:title="@string/popup_freeform_enable_title"
                android:summary="@string/popup_freeform_enable_summary"
                android:defaultValue="true"
                app:iconSpaceReserved="false"/>
            <SwitchPreference
                android:key="popup_bubble_block"
                android:title="@string/popup_bubble_block_title"
                android:summary="@string/popup_bubble_block_summary"
                android:defaultValue="true"
                app:iconSpaceReserved="false"/>
            <Preference
                android:key="freeform_blacklist_apps"
                android:title="@string/preference_freeform_blacklist_apps"
                android:summary="@string/preference_freeform_blacklist_apps_summary"
                app:iconSpaceReserved="false"/>
            <Preference
                android:key="landscape_apps"
                android:title="@string/preference_landscape_apps"
                android:summary="@string/preference_landscape_apps_summary"
                app:iconSpaceReserved="false"/>
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 通知 -->
    <PreferenceScreen
        android:key="pref_notification_settings"
        android:title="@string/category_notify"
        android:summary="@string/summary_notify_placeholder"
        android:icon="@drawable/ic_setting_notification"
        android:layout="@layout/preference_main_entry"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/category_notify">
            <SwitchPreference
                android:key="notify_freeform"
                android:title="@string/switch_notify_freeform"
                android:summary="@string/switch_notify_freeform_summary"
                android:defaultValue="true"
                app:iconSpaceReserved="false"/>
            <Preference
                android:key="notification_freeform_apps"
                app:title="@string/preference_notification_apps"
                android:summary="@string/preference_notification_apps_summary"
                app:iconSpaceReserved="false"/>
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 其他设置 -->
    <PreferenceScreen
        android:key="pref_other_settings"
        android:title="@string/other_settings_title"
        android:summary="@string/summary_other_placeholder"
        android:icon="@drawable/ic_setting_other"
        android:layout="@layout/preference_main_entry"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/other_settings_title">
            <Preference
                android:key="reset_overlay_setting"
                app:title="@string/preference_reset_overlay_setting"
                android:summary="@string/preference_reset_overlay_setting_summary"
                app:iconSpaceReserved="false"/>
            <Preference
                android:title="@string/preference_start_by_recent_view_title"
                android:summary="@string/preference_start_by_recent_view_summary"
                app:iconSpaceReserved="false"/>
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>